# CODA

./: .clang_complete  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  build.script  build.sh  script.sh
core/: CMakeLists.txt  core  core.cpp  reset_makefile.py  search_FHE_parameter.cpp  test_slot.cpp
core/include/: CMakeLists.txt
core/include/HElib/: EncryptedArray.h  PAlgebra.h  replicate.h
core/include/NTL/: mach_desc.h
core/include/core/: AES.hpp  PPE.hpp  coda.hpp  coda_wrapper.hpp  contingency_table.hpp  core.hpp  ctxt_util.hpp  encoder.hpp  file_util.hpp  gc_user.hpp  global.hpp  greaterthan.h  literal.hpp  protocol-LR.hpp  protocol-PCA.hpp  protocol-contingency.hpp  protocol-hybrid-contingency.hpp  protocol-mean.hpp  protocol-percentile.hpp  protocol-rank.hpp  protocol.hpp  protocol_factory.hpp
core/include/core/PPE/: Context.hpp  EncMat.hpp  EncVec.hpp  PPE.hpp  PubKey.hpp  SecKey.hpp  types.hpp
core/include/core/algebra/: EncMat.hpp  EncVec.hpp  util.hpp
core/include/docopt.cpp/: docopt_value.h
core/include/spdlog/details/: pattern_formatter_impl.h  pattern_formatter_impl.h.threadID_level  registry.h
core/modules/: FindGMP.cmake  FindNTL.cmake  findNTL.cmake
core/src/: CMakeLists.txt
core/src/HElib/: AltCRT.cpp  CMakeLists.txt  EncryptedArray.cpp  FHE.cpp  FHEContext.cpp  NumbTh.cpp  PAlgebra.cpp  replicate.cpp
core/src/NTL/: CMakeLists.txt
core/src/core/: AES.cpp  CMakeLists.txt  chi2.cpp  coda.cpp  contingency-eval.cpp  contingency.cpp  contingency_table.cpp  contingency_table_helper.cpp  core.cpp  ctxt_util.cpp  encoder.cpp  file_util.cpp  gc_user.cpp  global.cpp  greaterthan.cpp  literal.cpp  mean.cpp  protocol-LR.cpp  protocol-PCA.cpp  protocol-contingency.cpp  protocol-hybrid-contingency.cpp  protocol-mean.cpp  protocol-percentile.cpp  protocol.cpp  rank-k.cpp
core/src/core/PPE/: CMakeLists.txt  Context.cpp  EncMat.cpp  EncVec.cpp  PubKey.cpp  SecKey.cpp  coda_ppe_wrapper.cpp
core/src/core/algebra/: .EncVec.cpp.swp  CMakeLists.txt  EncMat.cpp  EncVec.cpp  util.cpp
core/src/doctopt.cpp/: CMakeLists.txt  docopt.cpp
core/test/: BenchmarkMatMul.cpp  BenchmarkTableSuppression.cpp  CMakeLists.txt  TestAES.cpp  TestAliceBob.cpp  TestContingencyTable.cpp  TestDecode1Slot.cpp  TestDocopt.cpp  TestDumpKeys.cpp  TestEncVec.cpp  TestGreaterThan.cpp  TestMatMult.cpp.cpp  TestPPE.cpp  TestPlaintext.cpp  TestProtocol-LR.cpp  TestProtocol-PCA.cpp  TestProtocol-contingencytable.cpp  TestProtocol-hybrid-contingency.cpp  TestProtocol-mean.cpp  TestProtocol-percentile.cpp  TestRepeat.cpp  testRepeat.cpp
docs/: README.md  _config.yml
docs/_layouts/: default.html  index.html
example/analyst/: schema.csv
example/user_a/: data_user_a.csv
example/user_b/: data_user_b.csv
ui/: CMakeLists.txt
ui/include/client/: constants.hpp  driver.hpp  filesystem_client.hpp  logger.hpp  network_client.hpp  schema.hpp  utest_client.hpp  utils.h
ui/include/common/: constants.hpp  filesystem_base.hpp  utils.h
ui/include/server/: driver.hpp  filesystem_server.hpp  network_base.hpp  network_server.hpp  utest_server.hpp
ui/include/spdlog/: spdlog.h  tweakme.h
ui/include/spdlog/details/: registry.h.trace
ui/src/client/: CMakeLists.txt  driver.cpp  filesystem_client.cpp  main.cpp  network_client.cpp  schema.cpp  utest_client.cpp  utils.cpp
ui/src/common/: CMakeLists.txt  constants.cpp  filesystem_base.cpp  network_base.cpp  utils.cpp
ui/src/server/: CMakeLists.txt  constants.cpp  driver.cpp  filesystem_base.cpp  filesystem_server.cpp  main.cpp  network_server.cpp  utest.cpp  utest_server.cpp
