cmake_minimum_required(VERSION 3.2)
ENABLE_TESTING()
project(coda_clion)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
option(BUILD_core "To build core" OFF)
option(BUILD_lib "To build all third part libraies" OFF)
option(BUILD_ntl "To build NTL libray" OFF)
option(BUILD_gmp "To build GMP libray" OFF)
option(BUILD_ui "To build ui" OFF)
add_subdirectory(core)
add_subdirectory(ui)
