cmake_minimum_required(VERSION 3.2)
ENABLE_TESTING()
project(coda_clion)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
option(MULT_THREADS "multithread" off)
option(NR_THREADS "number of threads" 1)
option(BUILD_core "To build core" off)
option(BUILD_lib "To build all third part libraies" off)
option(BUILD_ntl "To build NTL libray" off)
OPTION(BUILD_gmp "To build gmp LIBRAY" off)
OPTION(BUILD_test "To build test files" off)
option(BUILD_ui "To build ui" off)
add_subdirectory(core)
add_subdirectory(ui)
