include_directories(../../include/server)
include_directories(../../include/common)
include_directories(../../include/)
set(SRCS ../common/constants.cpp driver.cpp ../common/filesystem_base.cpp filesystem_server.cpp ../common/network_base.cpp network_server.cpp utest.cpp main.cpp)
add_executable(server ${SRCS})
target_link_libraries(server pthread)
